# devcrew-ai

./: README.md  package.json  pnpm-lock.yaml
.puku-cli/: settings.local.json
apps/api/: alembic.ini  pyproject.toml  test_db.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 8a344b5ac13d_add_projects_table.py  9b2c1f4a3e5d_add_timelines_table.py  abff39cda22e_add_workspaces_table.py  e344b2dff45f_initial_baseline.py
apps/api/src/devcrew_api/: main.py
apps/api/src/devcrew_api/api/: health.py  router.py
apps/api/src/devcrew_api/api/v1/: __init__.py  projects.py  timelines.py  workspaces.py
apps/api/src/devcrew_api/core/: config.py  logging.py
apps/api/src/devcrew_api/db/: __init__.py  base.py  session.py
apps/api/src/devcrew_api/models/: __init__.py  project.py  timeline.py  workspace.py
apps/api/src/devcrew_api/schemas/: __init__.py  project.py  timeline.py  workspace.py
apps/api/src/devcrew_api/services/: __init__.py  project_service.py  timeline_service.py  workspace_service.py
apps/api/tests/: conftest.py  test_timeline_endpoints.py  test_timeline_migration.py  test_timeline_model.py  test_timeline_schemas.py  test_timeline_service.py
apps/web/: next.config.ts  package.json
apps/web/app/: loading.tsx  page.tsx
apps/web/app/(app)/: layout.tsx  loading.tsx  page.tsx
apps/web/components/: app-shell.tsx  app-sidebar.tsx  mobile-sidebar-sheet.tsx  site-header.tsx
apps/web/components/shared/: empty-state.tsx  error-state.tsx  (+3 more)
apps/web/hooks/: use-mobile.ts
docs/: ROADMAP.md
docs/architecture/: decisions.md  domain-model.md
(+28 files in other folders)
