[project]
name = "devcrew-api"
version = "0.1.0"
description = "Multi-agent software engineering team powered by Qwen Cloud."
readme = "README.md"
authors = [
    { name = "Sheikh Mohammad Rakib", email = "u2009023@student.cuet.ac.bd" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=2.44.0",
    "orjson>=3.11.9",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
devcrew-api = "devcrew_api.main:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
